
2015-12-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c (invalid_value): added output for not-numeric, min, max
	* config.c (cb_config_entry): validate word length against COB_MAX_WORDLEN
	* cobc.c (process_command_line): moved check of configuration values for
	  tab-width and text-columns to config.c (cb_config_entry)

2015-12-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	part fixed bug #177 - added missing ODO checks for subordinate items
	* typeck.c (cb_validate_program_data): set flag_odo_item for ODO parents
	* typeck.c (cb_build_identifier): generate cob_check_odo for all sub-items
	  of items with flag_odo_item (instead of only for ODO fields of itself)
	* tree.h, codegen.c: adjustments for changes to typeck.c

2015-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	fixed bug #172 - NESTED OCCURS with DEPENDING not working
	* field.c (validate_field_1): allow nested ODO with complex-odo = yes
	* codegen.c (output_data): recalculate size for nested ODO by -fodoslide

2015-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: added checks of number of args passed to
	  FORMATTED-(DATE)TIME.
	* parser.y, reserved.c: added SYSTEM-OFFSET to FORMATTED-(DATE)TIME.
	* parser.y: removed PENDING from FULL and REQUIRED clauses.
	* tree.c: added (warn_cannot_get_utc).

2015-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: post-process generated flex sources via sed for non-GNU
	  compilers that define __STDC_VERSION__ >= 199901L but don't work correct

2015-12-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: exit on -V for GNU-coding-conformance, added -vv (very verbose)
	  resulting in a call to cobc_print_version() after command line parsing,
	  removed -R as we have a short version for --debug in -d already
	* cobc.h: added CB_STD_ACU and CB_STD_2014

2015-12-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
