@@ -38,9 +38,9 @@ standard-define			1
 tab-width:			8
 text-column:			72
 # Maximum word-length for COBOL words / Programmer defined words
-# Be aware that GC checks the word length against COB_MAX_WORDLEN
-# first (currently 61)
-word-length:			127
+# current max (COB_MAX_WORDLEN): 61
+#word-length:			127
+word-length:			61
 
 # Value: 'mf', 'ibm'
 # 
